# deer-flow-test

./: .gitignore  .gitmodules  CONTROL_CENTER_PLAN.md  Cargo.toml  PLAN.md  STATE_SERVER_ARCHITECTURE.md  STATE_SERVER_DEVELOPER_TROUBLESHOOTING.md  STATE_SERVER_STAKEHOLDERS_AND_SOURCES_OF_TRUTH.md  STATE_SERVER_STRESS_TESTS.md  full_plans_1.txt  full_plans_2.txt  opencode.json  test-data
apps/berg10-agent/: AGENTS.md.example  README.md  pyproject.toml  run.sh
apps/berg10-agent/berg10_agent/: __init__.py  config.py
apps/berg10-agent/berg10_agent/nodes/: __init__.py  decide_action.py  grep_search.py  patch_file.py  read_file.py  run_command.py
apps/berg10-agent/src/: constants.py  protocol.py
apps/berg10-agent/src/berg10_agent/: constants.py  server.py
apps/berg10-agent/src/jsonrpc/: __init__.py  core.py  handler.py  server.py  test_core.py  test_server.py  transport.py
apps/berg10-agent/tests/: test_flow.py  test_nodes.py  test_protocol.py
apps/deer_chat_lab/: Cargo.toml
apps/deer_chat_lab/src/: app.rs  lib.rs  main.rs  scenarios.rs
apps/deer_chat_lab/tests/: .live_chat_lab.rs.pending-snap  live_chat_lab.rs
apps/deer_design/: Cargo.toml
apps/deer_design/src/: app.rs  layout_presets.rs  lib.rs  main.rs  panel_catalog.rs  scenarios.rs
apps/deer_design/tests/: layout_runtime_proof.rs  spatial_projection_proof.rs
apps/deer_gui/: .env.example  AGENTS.md  Cargo.toml  README.md  config.yaml
apps/deer_gui/assets/scenes/: descent.scene.ron  medieval_open.scene.ron  precursors.scene.ron  tet.scene.ron
apps/deer_gui/assets/themes/: descent.theme.ron  precursors.theme.ron  tet_orchestrator.theme.ron
apps/deer_gui/python/: bridge.py
apps/deer_gui/src/: app.rs  bridge.rs  check_fog.rs  check_shadow.rs  check_skybox.rs  constants.rs  lib.rs  main.rs  models.rs  preferences.rs
apps/deer_gui/src/audio/: events.rs  manager.rs  mod.rs  plugin.rs
apps/deer_gui/src/bridge/: adapter.rs  client.rs  commands.rs  dispatch.rs  events.rs  mod.rs  orchestrator.rs  payloads.rs  plugin.rs  transport.rs
apps/deer_gui/src/building/: README.md  mod.rs
apps/deer_gui/src/camera/: components.rs  mod.rs  navigation.rs  plugin.rs  systems.rs
apps/deer_gui/src/composition/: closed_loop.rs  detail_routing.rs  layout_presets.rs  mod.rs  panel_catalog.rs  plugin.rs  scripted_scenarios.rs  shell_mode.rs  view_hosts.rs  world_projection_binding.rs
apps/deer_gui/src/diagnostics/: mod.rs  plugin.rs
apps/deer_gui/src/hud/: adapters.rs  bottom_console.rs  center_canvas.rs  event_ticker.rs  left_panel.rs  mod.rs  modal.rs  plugin.rs  right_inspector.rs  shell_sync.rs  state_systems.rs  styles.rs  top_bar.rs  transclusion.rs
apps/deer_gui/src/picking/: mod.rs  plugin.rs  systems.rs
apps/deer_gui/src/render/: atmosphere.rs  auto_detect.rs  capability_detect.rs  lighting.rs  mod.rs  plugin.rs  post_processing.rs  quality.rs
apps/deer_gui/src/scene/: audio_bridge.rs  descriptor.rs  descriptor_config.rs  loader.rs  manager.rs  mod.rs  plugin.rs  primitives.rs  traits.rs
apps/deer_gui/src/shell/: mod.rs  panel_participation.rs  plugin.rs  state.rs  systems.rs
apps/deer_gui/src/theme/: descent_theme.rs  descriptor.rs  faction.rs  faction_selector.rs  mod.rs  plugin.rs  precursors_theme.rs  tet_theme.rs  theme.rs
apps/deer_gui/src/ui/: fonts.rs  mod.rs
apps/deer_gui/src/world/: components.rs  foliage.rs  mod.rs  npc.rs  plugin.rs  spatial.rs  state.rs  systems.rs  viewport.rs  water.rs
apps/deer_gui/tests/: integration.rs
apps/deer_gui/tests/integration/: audio.rs  battle_command.rs  bridge.rs  bridge_adapter.rs  camera.rs  constants_diagnostics.rs  first_playable_closed_loop.rs  first_playable_composition.rs  first_playable_policy_and_streaming.rs  fonts.rs  hud.rs  hud_transclusion.rs  models_pipeline.rs  picking.rs  scene_audio.rs  scene_descent.rs  scene_descriptors.rs  scene_generators.rs  scene_manager.rs  scene_precursors.rs  scene_primitives.rs  scene_tet.rs  scene_weather.rs  shell_state.rs  theme.rs  theme_world_colors.rs  world.rs  world_extended.rs
crates/berg10/storage-catalog/: Cargo.toml
crates/berg10/storage-catalog/src/: catalog.rs  config.rs  lib.rs  query.rs  types.rs
crates/berg10/storage-catalog/tests/: integration.rs
crates/berg10/storage-vfs/: Cargo.toml
crates/berg10/storage-vfs/src/: backend.rs  content_addressing.rs  lakefs.rs  lib.rs
crates/berg10/storage-vfs/tests/: integration.rs
crates/berg10/warm-cache/: Cargo.toml
crates/berg10/warm-cache/src/: checkout.rs  config.rs  lib.rs
crates/berg10/warm-cache/tests/: integration.rs
crates/foundation/replay/: Cargo.toml
crates/foundation/replay/src/: error.rs  event_log.rs  fixtures.rs  lib.rs
crates/foundation/replay/tests/: replay_flow.rs
crates/pipeline/derivations/: Cargo.toml
crates/pipeline/derivations/src/: artifacts.rs  common.rs  composer.rs  lib.rs  macro_state.rs  orchestration.rs  thread_header.rs
crates/pipeline/derivations/tests/: artifact_vm.rs  composer_vm.rs  macro_state_vm.rs  orchestration_vm.rs  thread_header_vm.rs
crates/pipeline/normalizers/: Cargo.toml
crates/pipeline/normalizers/src/: carrier.rs  envelopes.rs  error.rs  governance.rs  lib.rs  promotions.rs  representation.rs
crates/pipeline/normalizers/tests/: carrier_normalization.rs  promotion_and_representation.rs  stream_normalization.rs
crates/pipeline/raw_sources/: Cargo.toml
crates/pipeline/raw_sources/src/: artifact_gateway.rs  error.rs  lib.rs  run_stream.rs  thread_gateway.rs  upload_gateway.rs
crates/runtime/world_projection/: Cargo.toml
crates/storage/core/: Cargo.toml
crates/terrain/: Cargo.toml  README.md
crates/terrain/src/: error.rs  generator.rs  heightmap.rs  lib.rs  lod.rs  material.rs  mesh_gen.rs  splat.rs
crates/terrain/tests/: integration_tests.rs
crates/ui/layout_runtime/: Cargo.toml
crates/vegetation/: Cargo.toml
crates/vegetation/src/: biome.rs  error.rs  lib.rs  placement.rs
crates/views/chat_thread/: Cargo.toml
crates/views/telemetry_view/: Cargo.toml
crates/water/: Cargo.toml
crates/water/src/: error.rs  lib.rs  plane.rs  waves.rs
(+729 files in other folders)
