[workspace]
members = [
    "apps/deer_gui",
    "crates/foundation/contracts",
    "crates/foundation/domain",
    "crates/pipeline/normalizers",
    "crates/pipeline/raw_sources",
    "crates/runtime/world_projection",
    "crates/ui/layout_runtime",
    "crates/ui/panel_shells",
]
resolver = "2"
