[workspace]
members = [
    "apps/deer_chat_lab",
    "apps/deer_design",
    "apps/deer_gui",
    "crates/foundation/contracts",
    "crates/foundation/domain",
    "crates/foundation/replay",
    "crates/pipeline/derivations",
    "crates/pipeline/normalizers",
    "crates/pipeline/raw_sources",
    "crates/runtime/read_models",
    "crates/runtime/world_projection",
    "crates/views/scene3d",
    "crates/views/chat_thread",
    "crates/views/list_detail",
    "crates/views/telemetry_view",
    "crates/ui/layout_runtime",
    "crates/ui/panel_shells",
]
resolver = "2"
