[package]
name = "deer-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.44", features = ["clock", "serde"] }
crossbeam-channel = "0.5.15"
directories = "6.0.0"
dotenvy = "0.15.7"
eframe = "0.34.1"
egui = "0.34.1"
env_logger = "0.11.10"
log = "0.4.29"
opener = "0.8.4"
rfd = "0.17.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
uuid = { version = "1.23.0", features = ["serde", "v4"] }
