[package]
name = "deer-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
# ── Engine ───────────────────────────────────────────────────────────
bevy = { version = "0.18.1", default-features = false, features = [
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_render",
    "bevy_winit",
    "bevy_gizmos",
    "bevy_log",
    "bevy_state",
    "bevy_scene",
    "bevy_picking",
    "bevy_mesh",
    "bevy_audio",
    "vorbis",
    "png",
    "x11",
    "wayland",
    "multi_threaded",
    "default_font",
] }

# ── Bevy ecosystem plugins ──────────────────────────────────────────
bevy_egui = "0.39"
bevy_hanabi = "0.18"
bevy_tweening = "0.15"
bevy_prototype_lyon = "0.16"

# ── Serialization / data ────────────────────────────────────────────
chrono = { version = "0.4.44", features = ["clock", "serde"] }
ron = "0.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# ── Concurrency / channels ──────────────────────────────────────────
crossbeam-channel = "0.5.15"

# ── Filesystem / env ────────────────────────────────────────────────
directories = "6.0.0"
dotenvy = "0.15.7"

# ── Identity ────────────────────────────────────────────────────────
uuid = { version = "1.23.0", features = ["serde", "v4"] }

# ── Error handling ──────────────────────────────────────────────────
thiserror = "2"

# ── HTTP / parsing ──────────────────────────────────────────────────
ureq = "3"
regex = "1"
