[package]
name = "deer-water"
version = "0.1.0"
edition = "2021"
description = "Water plane generation with wave animation for 3D scenes"
authors = ["Deer Project"]

[dependencies]
bevy = { version = "0.18.1", default-features = false, features = [
    "bevy_asset",
    "bevy_render",
    "bevy_mesh",
] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2"

[dev-dependencies]
bevy = { version = "0.18.1", features = ["bevy_asset", "bevy_render", "bevy_mesh"] }
