[package]
name = "berg10-storage-catalog"
version = "0.1.0"
edition = "2021"

[dependencies]
deer-foundation-contracts = { path = "../../foundation/contracts" }
berg10-storage-vfs = { path = "../storage-vfs" }
iceberg = { version = "0.9.0" }
opendal = { version = "0.55.0" }
iceberg-storage-opendal = { version = "0.9.0" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.17"
chrono = { version = "0.4.44", features = ["clock", "serde"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
arrow-schema = "57.1"
async-trait = "0.1"
tracing = "0.1"
anyhow = "1.0"

[dev-dependencies]
tempfile = "3"
