[package]
name = "berg10-storage-catalog"
version = "0.1.0"
edition = "2021"

[dependencies]
deer-foundation-contracts = { path = "../../foundation/contracts" }
berg10-storage-vfs = { path = "../storage-vfs" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.17"
chrono = { version = "0.4.44", features = ["clock", "serde"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "chrono", "json", "migrate"] }
tracing = "0.1"
anyhow = "1.0"

[dev-dependencies]
tempfile = "3"
