[package]
name = "berg10-storage-vfs"
version = "0.1.0"
edition = "2021"

[dependencies]
deer-foundation-contracts = { path = "../../foundation/contracts" }
opendal = { version = "0.55.0", features = ["services-s3", "services-gcs", "services-azblob", "services-memory", "services-fs"] }
blake3 = "1.8.4"
bs58 = "0.5.1"
thiserror = "2.0.17"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
backon = "1"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
