[package]
name = "berg10-warm-cache"
version = "0.1.0"
edition = "2021"

[dependencies]
berg10-storage-catalog = { path = "../storage-catalog" }
berg10-storage-vfs = { path = "../storage-vfs" }
deer-foundation-contracts = { path = "../../foundation/contracts" }
thiserror = "2.0.17"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
anyhow = "1.0"
pathdiff = "0.2"
chrono = { version = "0.4.44", features = ["clock", "serde"] }

[dev-dependencies]
tempfile = "3"
