[package]
name = "deer-pipeline-normalizers"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.44", features = ["clock", "serde"] }
deer-foundation-contracts = { path = "../../foundation/contracts" }
deer-foundation-domain = { path = "../../foundation/domain" }
deer-foundation-replay = { path = "../../foundation/replay" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.17"

[dev-dependencies]
similar-asserts = "1.7.0"
