[package]
name = "deer-pipeline-raw-sources"
version = "0.1.0"
edition = "2021"

[features]
default = []
redpanda = ["dep:rdkafka"]

[dependencies]
agent-client-protocol = "0.10.4"
async-trait = "0.1.89"
blake3 = "1.5.1"
bytes = { version = "1.10.1", features = ["serde"] }
chrono = { version = "0.4.42", features = ["clock", "serde"] }
dashmap = "6.1.0"
deer-foundation-contracts = { path = "../../foundation/contracts" }
deer-foundation-paths = { version = "0.1.0", path = "../../foundation/paths" }
rdkafka = { version = "0.38.0", features = ["cmake-build", "tokio"], optional = true }
redb = "2.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["raw_value"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }
tokio-util = { version = "0.7.16", features = ["compat", "io"] }
tracing = "0.1.41"
uuid = { version = "1.18.1", features = ["serde", "v7"] }

[dev-dependencies]
similar-asserts = "1.7.0"
tempfile = "3.27.0"
which = "8.0.2"
