[package]
name = "deer-ui-layout-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
deer-ui-panel-shells = { path = "../panel_shells" }
egui_dock = "0.13.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.17"

[dev-dependencies]
insta = { version = "1.43.2", features = ["yaml"] }
similar-asserts = "1.7.0"
