[package]
name = "deer-view-chat-thread"
version = "0.1.0"
edition = "2021"

[dependencies]
deer-pipeline-derivations = { path = "../../pipeline/derivations" }
deer-runtime-read-models = { path = "../../runtime/read_models" }
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
insta = { version = "1.43.2", features = ["yaml"] }
